# instrumentio_work

./: .editorconfig  .gitignore  .markdown-link-check.json  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug.md  Feature proposal.md  Question.md  Roadmap.md  Task.md
.github/PULL_REQUEST_TEMPLATE/: Bugfix.md  Roadmap.md  Task.md
.github/workflows/: ci.yml
0_basics/: README.md
1_concepts/: Cargo.toml  README.md
1_concepts/1_1_default_clone_copy/: Cargo.toml  README.md
1_concepts/1_2_box_pin/: Cargo.toml  README.md
1_concepts/1_3_rc_cell/: Cargo.toml  README.md
1_concepts/1_4_cow/: Cargo.toml  README.md
1_concepts/1_5_convert_cast_deref/: Cargo.toml  README.md
1_concepts/1_6_dispatch/: Cargo.toml  README.md
1_concepts/1_7_sized/: Cargo.toml  README.md
1_concepts/1_8_thread_safety/: Cargo.toml  README.md
1_concepts/1_9_phantom/: Cargo.toml  README.md
1_concepts/src/: main.rs
2_idioms/: Cargo.toml  README.md
2_idioms/2_1_type_safety/: Cargo.toml  README.md
2_idioms/src/: main.rs
3_ecosystem/: Cargo.toml  README.md
3_ecosystem/3_1_testing/: Cargo.toml  README.md
3_ecosystem/3_1_testing/proptest-regressions/: main.txt
3_ecosystem/3_1_testing/src/: main.rs
3_ecosystem/3_1_testing/tests/: cucumber.rs
3_ecosystem/3_1_testing/tests/features/: game.feature
4_backend/: Cargo.toml  README.md
4_backend/4_1_db/: .env  Cargo.toml  README.md
4_backend/4_1_db/src/: main.rs  models.rs  schema.rs
archive/: Stjepan_Glavina_Designing_a_channel.md  Stjepan_Glavina_Lock-free_Rust_Crossbeam_in_2019.md
(+67 files in other folders)
