[package]
name = "step_3_1"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
cucumber = { version = "0.20", features = ["timestamps", "tracing"] }
rand = "0.8"
futures = "0.3"
tracing = "0.1"
proptest = "1.4"

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
