[package]
name = "step_4_1"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

tokio = { version = "1.36.0", features = [ "full" ] }
dotenv = "0.15.0"
diesel = { version = "2.1.4", features = [ "postgres" ] }
diesel-async = { version = "0.4.1", features = [ "postgres" ] }
clap = { version = "4.5.1", features = [ "derive" ] }
